test/Fail/Issue4784a.agda
{-# OPTIONS --cubical-compatible #-}
postulate
  A : Set
  B : A → Set

T = (@0 x : A) → B x
